src/objects/Farmer__c.object
<CustomObject>
    <description>A farmer who has registered in our system, associated with a Person object.</description>
    <fields>
        <fullName>Crops__c</fullName>
        <description>Top crops grown by the farmer</description>
        <label>Crops</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Potatoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundnuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorghum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bananas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Household_Status__c</fullName>
        <description>The farmer&apos;s status in the household</description>
        <label>Household Status</label>
        <picklist>
            <picklistValues>
                <fullName>Household head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse of household head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child of household head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Land_Size__c</fullName>
        <description>Amount of land, in acres, owned by the farmer</description>
        <label>Land Size (Acres)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Livestock__c</fullName>
        <description>Livestock kept by the farmer</description>
        <label>Livestock</label>
        <picklist>
            <picklistValues>
                <fullName>Cattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chickens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkeys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donkeys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pigs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbits</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_farms__c</fullName>
        <label>Number of farms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>Parent object with core person details</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Farmers</relationshipLabel>
        <relationshipName>Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <label>Registered By</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Farmers Registered</relationshipLabel>
        <relationshipName>Farmers_Registered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topics_of_Interest__c</fullName>
        <description>Topics of interest for the farmer</description>
        <label>Topics of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Market Prices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planting/Garden Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest and Disease Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting/PHH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming as a Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock Rearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Registered_By__c</columns>
        <columns>Crops__c</columns>
        <columns>Household_Status__c</columns>
        <columns>Land_Size__c</columns>
        <columns>Livestock__c</columns>
        <columns>Topics_of_Interest__c</columns>
        <columns>Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>6/26/2011 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Farmer ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>